crt: Add testcases for lfs functions
This will check that of those functions can be compiled, linked and at
runtime can be resolved from CRT DLL library.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -4401,6 +4401,7 @@ testcase_progs = \
   testcases/t_fstat \
   testcases/t_intrinc \
   testcases/t_imagebase \
+  testcases/t_lfs \
   testcases/t_matherr \
   testcases/t_nullptrexception \
   testcases/t_readdir \
