crt: Provide emulation of _fstat32, _stat32 and _wstat32 functions for 64-bit msvcrt builds
All 64-bit CRT libraries except the msvcrt.dll provides native _fstat32,
_stat32 and _wstat32 functions. 64-bit system os msvcrt.dll is an exception
and does not contain these function. So implement mingw-w64 emulation of
these functions via the 64-bit variants of stat functions.

Reported issue: https://github.com/mingw-w64/mingw-w64/issues/103

Signed-off-by: Martin Storsjö <martin@martin.st>
(cherry picked from commit 3f2917f3b2e845df1aa46d77207ff4fbe08cb29b)
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -624,6 +624,9 @@ src_msvcrt64=\
   misc/wcsnlen.c \
   misc/wctob.c \
   stdio/_fseeki64.c \
+  stdio/_fstat32.c \
+  stdio/_stat32.c \
+  stdio/_wstat32.c \
   string/wcstok.c
 
 # Files included in libmsvcrt-os.a (for msvcrt.dll) on arm32
@@ -777,7 +780,10 @@ src_msvcrtarm64=\
   misc/_getpid.c \
   misc/__initenv.c \
   misc/__winitenv.c \
+  stdio/_fstat32.c \
   stdio/_setmaxstdio.c \
+  stdio/_stat32.c \
+  stdio/_wstat32.c \
   stdio/gets.c
 
 if ARM64EC
