crt: Provide emulation of _fstat32i64, _stat32i64 and _wstat32i64 functions for 64-bit msvcrt builds
All 64-bit CRT libraries except the msvcrt.dll provides native _fstat32i64,
_stat32i64 and _wstat32i64 functions. 64-bit system os msvcrt.dll is an
exception and does not contain these function.

mingw-w64 already contains emulation of these functions for pre-msvcrt40
32-bit builds. Extend this emulation for 64-bit msvcrt.dll builds.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -627,8 +627,11 @@ src_msvcrt64=\
   misc/wctob.c \
   stdio/_fseeki64.c \
   stdio/_fstat32.c \
+  stdio/_fstat32i64.c \
   stdio/_stat32.c \
+  stdio/_stat32i64.c \
   stdio/_wstat32.c \
+  stdio/_wstat32i64.c \
   string/wcstok.c
 
 # Files included in libmsvcrt-os.a (for msvcrt.dll) on arm32
@@ -783,9 +786,12 @@ src_msvcrtarm64=\
   misc/__initenv.c \
   misc/__winitenv.c \
   stdio/_fstat32.c \
+  stdio/_fstat32i64.c \
   stdio/_setmaxstdio.c \
   stdio/_stat32.c \
+  stdio/_stat32i64.c \
   stdio/_wstat32.c \
+  stdio/_wstat32i64.c \
   stdio/gets.c
 
 if ARM64EC
