github: Use gcc, not g++, for test building a C test program
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -554,7 +554,7 @@ jobs:
           ref: 20250430
       - name: Run tests
         run: |
-          g++ test/hello.c -o hello.exe
+          gcc test/hello.c -o hello.exe
           ./hello.exe
           gcc test/crt-test.c -o crt-test.exe
           ./crt-test.exe
