crt: Don't expose hypot() as an alias to _hypot()
We already have a wrapper function hypot() in math/hypot.c (which
handles special cases of inputs, then invokes _hypot() internally).
This wrapper function is included in all msvcr* import libraries
already. By providing an alias, the import library ended up providing
two symbols with the same name within the same library - making it
unclear which one the linker ends up using.

This fixes the cabs testcase on i686 on msvcrt, with LLVM tools.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -232,7 +232,7 @@ ADD_UNDERSCORE(wcsupr)
 #ifdef UCRTBASE
 ; hypot is natively exported from UCRT
 #else
-ADD_UNDERSCORE(hypot)
+; hypot is provided by math/hypot.c as a wrapper around _hypot
 #endif
 ADD_UNDERSCORE(j0)
 ADD_UNDERSCORE(j1)
