crt: Define LFS creat64 symbol as alias in crt-aliases.def.in
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -298,6 +298,7 @@ ftello == ftell
 
 ; This is list of symbol aliases for Large File Specification (extension to Single UNIX Specification)
 ; https://unix.org/version2/whatsnew/lfs20mar.html#3.1 section 3.1 Transitional Extensions
+creat64 == _creat
 open64 == _open
 fopen64 == fopen
 freopen64 == freopen
