crt: Make i386 _NLG_Dispatch2 and _NLG_Return symbols compatible with msvc
These two symbols _NLG_Dispatch2 and _NLG_Return are available only in
32-bit x86 crt dll libraries, starting in msvcr80.dll.

msvc import library msvcrt.lib from the beginning since Visual C++ 2005
contains these symbols without stdcall decoration.

So for compatibility with msvc, do not decorate these symbols with @SIZE
suffix (the suffix used for stdcall) in all def files.

Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib-common/vcruntime140-common.def.in
+++ b/mingw-w64-crt/lib-common/vcruntime140-common.def.in
@@ -4,8 +4,8 @@ F_NON_I386(_CxxThrowException)
 F_I386(_EH_prolog)
 _FindAndUnlinkFrame
 _IsExceptionObjectToBeDestroyed
-F_I386(_NLG_Dispatch2@4)
-F_I386(_NLG_Return@12)
+F_I386(_NLG_Dispatch2) ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
+F_I386(_NLG_Return) ; msvc symbol is without decoration but callee pop stack (like stdcall @12)
 F_I386(_NLG_Return2)
 _SetWinRTOutOfMemoryExceptionCallback
 __AdjustPointer
