--- a/mingw-w64-crt/lib-common/api-ms-win-crt-private-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-private-l1-1-0.def.in
@@ -12,8 +12,8 @@ _FindAndUnlinkFrame
 F_X64(_GetImageBase)
 F_X64(_GetThrowImageBase)
 _IsExceptionObjectToBeDestroyed
-F_I386(_NLG_Dispatch2@4)
-F_I386(_NLG_Return@12)
+F_I386(_NLG_Dispatch2) ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
+F_I386(_NLG_Return) ; msvc symbol is without decoration but callee pop stack (like stdcall @12)
 F_I386(_NLG_Return2)
 F_X64(_SetImageBase)
 F_X64(_SetThrowImageBase)
