--- a/mingw-w64-crt/lib-common/msvcr120_app.def.in
+++ b/mingw-w64-crt/lib-common/msvcr120_app.def.in
@@ -1040,8 +1040,8 @@ __CxxUnregisterExceptionObject
 __DestructExceptionObject
 __FrameUnwindFilter
 __GetPlatformExceptionInfo
-F_I386(_NLG_Dispatch2@4)
-F_I386(_NLG_Return@12)
+F_I386(_NLG_Dispatch2) ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
+F_I386(_NLG_Return) ; msvc symbol is without decoration but callee pop stack (like stdcall @12)
 F_NON_I386(__NLG_Dispatch2)
 F_I386(_NLG_Return2)
 F_NON_I386(__NLG_Return2)
