--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -332,6 +332,7 @@ src_msvcrt=\
   misc/_aligned_offset_recalloc.c \
   misc/_aligned_recalloc.c \
   misc/_configthreadlocale.c \
+  misc/_get_daylight.c \
   misc/_recalloc.c \
   misc/_set_purecall_handler.c \
   misc/imaxdiv.c \
@@ -877,6 +878,7 @@ src_pre_msvcr80=\
   misc/_aligned_offset_recalloc.c \
   misc/_aligned_recalloc.c \
   misc/_configthreadlocale.c \
+  misc/_get_daylight.c \
   misc/_get_errno.c \
   misc/_initterm_e.c \
   misc/_recalloc.c \
