--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -334,6 +334,7 @@ src_msvcrt=\
   misc/_configthreadlocale.c \
   misc/_get_daylight.c \
   misc/_get_dstbias.c \
+  misc/_get_timezone.c \
   misc/_recalloc.c \
   misc/_set_purecall_handler.c \
   misc/imaxdiv.c \
@@ -882,6 +883,7 @@ src_pre_msvcr80=\
   misc/_get_daylight.c \
   misc/_get_dstbias.c \
   misc/_get_errno.c \
+  misc/_get_timezone.c \
   misc/_initterm_e.c \
   misc/_recalloc.c \
   misc/_set_errno.c \
