crt: Add emulation of _get_tzname() function for pre-msvcr80 import libs
Function _get_tzname() is available in msvcr80+ and UCRT.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -335,6 +335,7 @@ src_msvcrt=\
   misc/_get_daylight.c \
   misc/_get_dstbias.c \
   misc/_get_timezone.c \
+  misc/_get_tzname.c \
   misc/_recalloc.c \
   misc/_set_purecall_handler.c \
   misc/imaxdiv.c \
@@ -884,6 +885,7 @@ src_pre_msvcr80=\
   misc/_get_dstbias.c \
   misc/_get_errno.c \
   misc/_get_timezone.c \
+  misc/_get_tzname.c \
   misc/_initterm_e.c \
   misc/_recalloc.c \
   misc/_set_errno.c \
