crt: Add emulation of _get_pgmptr() function for pre-msvcr80 import libs
Function _get_pgmptr() is available in msvcr80+, UCRT and also in i386 and
x64 msvcrt.dll since Windows Vista. It is not available in arm msvcrt.dll.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -334,6 +334,7 @@ src_msvcrt=\
   misc/_configthreadlocale.c \
   misc/_get_daylight.c \
   misc/_get_dstbias.c \
+  misc/_get_pgmptr.c \
   misc/_get_timezone.c \
   misc/_get_tzname.c \
   misc/_recalloc.c \
@@ -884,6 +885,7 @@ src_pre_msvcr80=\
   misc/_get_daylight.c \
   misc/_get_dstbias.c \
   misc/_get_errno.c \
+  misc/_get_pgmptr.c \
   misc/_get_timezone.c \
   misc/_get_tzname.c \
   misc/_initterm_e.c \
