crt: Add emulation of _get_wpgmptr() function for pre-msvcr80 import libs
Function _get_wpgmptr() is available in msvcr80+, UCRT and also in i386 and
x64 msvcrt.dll since Windows Vista. It is not available in arm msvcrt.dll.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -337,6 +337,7 @@ src_msvcrt=\
   misc/_get_pgmptr.c \
   misc/_get_timezone.c \
   misc/_get_tzname.c \
+  misc/_get_wpgmptr.c \
   misc/_recalloc.c \
   misc/_set_purecall_handler.c \
   misc/imaxdiv.c \
@@ -888,6 +889,7 @@ src_pre_msvcr80=\
   misc/_get_pgmptr.c \
   misc/_get_timezone.c \
   misc/_get_tzname.c \
+  misc/_get_wpgmptr.c \
   misc/_initterm_e.c \
   misc/_recalloc.c \
   misc/_set_errno.c \
