--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -565,6 +565,7 @@ src_msvcrt32=\
   misc/_get_fmode.c \
   misc/_initterm_e.c \
   misc/_set_doserrno.c \
+  misc/_set_fmode.c \
   misc/_time64.c \
   misc/imaxabs.c \
   misc/lc_locale_func.c \
@@ -629,6 +630,7 @@ src_msvcrt64=\
   misc/_get_fmode.c \
   misc/_initterm_e.c \
   misc/_set_doserrno.c \
+  misc/_set_fmode.c \
   misc/output_format.c \
   misc/_get_errno.c \
   misc/_set_errno.c \
@@ -902,6 +904,7 @@ src_pre_msvcr80=\
   misc/_recalloc.c \
   misc/_set_doserrno.c \
   misc/_set_errno.c \
+  misc/_set_fmode.c \
   misc/imaxabs.c \
   misc/invalid_parameter_handler.c \
   misc/mbrtowc.c \
