crt: Provide emulation of ___lc_handle_func for msvcrt.dll and msvcrtd.dll
Ensure that the ___lc_handle_func symbol is available for all builds which
uses msvcrt.dll and msvcrtd.dll runtime DLLs. ___lc_handle_func() emulation
uses the global __lc_handle variable which is present in all msvcrt.dll and
msvcrtd.dll versions.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -549,6 +549,7 @@ src_msvcrt32=\
   misc/msvcrt__getmainargs.c \
   misc/msvcrt__wgetmainargs.c \
   math/i386__copysignf.c \
+  misc/___lc_handle_func.c \
   misc/___mb_cur_max_func.c \
   misc/__p__osplatform.c \
   misc/__pctype_func.c \
@@ -1013,6 +1014,7 @@ src_msvcrtd=\
   $(src_pre_msvcr100) \
   $(src_pre_msvcr110) \
   $(src_pre_msvcr120) \
+  misc/___lc_handle_func.c \
   misc/msvcrt__getmainargs.c \
   misc/msvcrt__wgetmainargs.c
 
