crt: Improve support for ___lc_codepage_func() function
CRT libraries msvcrt.dll and msvcrtd.dll since their first version from
Visual C++ 4.2 provide symbol for global variable __lc_codepage.

So do not use GetProcAddress() for __lc_codepage symbol and instead
directly reference it at compile time. It means that the setlocale() hack
is not needed to compile for msvcrt.dll and msvcrtd.dll builds at all.

Split the current lc_locale_func.c source file into two files:
___lc_codepage_func.c and ___lc_codepage_func_emul.c.

Source file ___lc_codepage_func.c will use either ___lc_codepage_func() via
GetProcAddress() for msvcrt.dll builds or fallback to __lc_codepage global
variable by direct reference.

Source file ___lc_codepage_func_emul.c will use emulation via the
setlocale() hack. This is needed only for msvcrt40.dll and older CRTs.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -549,6 +549,7 @@ src_msvcrt32=\
   misc/msvcrt__getmainargs.c \
   misc/msvcrt__wgetmainargs.c \
   math/i386__copysignf.c \
+  misc/___lc_codepage_func.c \
   misc/___lc_handle_func.c \
   misc/___mb_cur_max_func.c \
   misc/__p__osplatform.c \
@@ -569,7 +570,6 @@ src_msvcrt32=\
   misc/_set_fmode.c \
   misc/_time64.c \
   misc/imaxabs.c \
-  misc/lc_locale_func.c \
   misc/output_format.c \
   misc/_get_errno.c \
   misc/_set_errno.c \
@@ -852,6 +852,7 @@ src_pre_msvcrt40=\
   stdio/fsetpos.c
 
 src_pre_msvcrt60=\
+  misc/___lc_codepage_func_emul.c \
   misc/__badioinfo.c \
   misc/__p__osplatform_emul.c \
   stdio/atoll.c \
@@ -867,7 +868,6 @@ src_pre_msvcr70=\
   misc/_aligned_offset_realloc.c \
   misc/_aligned_realloc.c \
   misc/_time64.c \
-  misc/lc_locale_func.c \
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wcstoimax.c \
@@ -1014,6 +1014,7 @@ src_msvcrtd=\
   $(src_pre_msvcr100) \
   $(src_pre_msvcr110) \
   $(src_pre_msvcr120) \
+  misc/___lc_codepage_func.c \
   misc/___lc_handle_func.c \
   misc/msvcrt__getmainargs.c \
   misc/msvcrt__wgetmainargs.c
