--- a/mingw-w64-crt/lib32/msvcr100d.def.in
+++ b/mingw-w64-crt/lib32/msvcr100d.def.in
@@ -1729,7 +1729,7 @@ atoi
 atol
 bsearch
 bsearch_s
-; btowc ; use replacement
+; btowc ; replaced for consistency with wctob
 calloc
 ceil DATA ; overwritten
 clearerr
@@ -1955,7 +1955,7 @@ wcstombs
 wcstombs_s
 wcstoul
 wcsxfrm
-; wctob ; use replacement
+; wctob ; replaced, CRT version may sign-extend its return value
 wctomb
 wctomb_s
 wmemcpy_s
